examples-generated/vpc/gateway.yaml
apiVersion: vpc.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: vpc/v1alpha1/gateway
  labels:
    testing.upbound.io/example-name: default
  name: default
spec:
  forProvider:
    name: foobar
    sharedEgressGateway:
    - {}
