examples-generated/vpc/routetable.yaml

apiVersion: vpc.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: vpc/v1alpha1/routetable
  labels:
    testing.upbound.io/example-name: egress-gateway
  name: egress-gateway
spec:
  forProvider:
    name: egress-gateway
    sharedEgressGateway:
    - {}
